# semantic-search-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  abtest.py  anomaly_detector.py  api.py  audit_markdown.py  audit_report.py  audit_runner.py  benchmark.py  calibration.py  cli.py  clustering.py  config.py  conftest.py  contributions.py  corpus_profile.py  demo.py  diagnostics.py  docker-compose.yml  drift.py  embedding_stats.py  eval_data.py  eval_stats.py  evaluation.py  experiment_tracker.py  explain.py  explain_result.py  hybrid_search.py  latency.py  logging_config.py  metrics.py  mmr.py  near_duplicates.py  pyproject.toml  (+18 more)
.github/workflows/: ci.yml  quality-gate.yml
docs/: RAG_EVAL_CHECKLIST.md  RAG_PLAYBOOK.md
examples/: rag_pipeline_demo.py
examples/audit/: README.md
examples/audit/dataset/: corpus.txt  queries.txt
examples/quality_gate/: baseline.json  config.json  regenerate_baseline.py
examples/quality_gate/dataset/: corpus.tsv  qrels.tsv  queries.tsv
tests/: conftest.py  test_abtest.py  test_anomaly_detector.py  test_api.py  test_audit_markdown.py  test_audit_report.py  test_audit_runner.py  test_benchmark.py  test_calibration.py  test_cli.py  test_cli_audit.py  test_clustering.py  test_contributions.py  test_corpus_duplicates.py  test_corpus_profile.py  test_diagnostics.py  test_drift.py  test_embedding_stats.py  test_eval_data.py  test_eval_stats.py  test_experiment_tracker.py  test_explain.py  test_explain_result.py  test_hybrid_search.py  test_latency.py  test_logging_config.py  test_metrics.py  test_mmr.py  test_near_duplicates.py  test_quality_gate.py  test_query_coverage.py  test_query_processor.py  test_rag_attribution.py  test_rag_chunking.py  test_rag_context.py  test_rag_eval.py  test_rag_fusion.py  test_rag_guardrails.py  test_rag_metadata.py  test_rag_prompting.py  (+6 more)
