[project]
name = "semantic-search-engine"
version = "1.0.0"
description = "A lightweight semantic search engine using sentence embeddings and FAISS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "get2salam"},
]
keywords = ["semantic-search", "embeddings", "nlp", "faiss", "sentence-transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/get2salam/semantic-search-engine"
Repository = "https://github.com/get2salam/semantic-search-engine"
Issues = "https://github.com/get2salam/semantic-search-engine/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["semantic_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
